# opnsense_unbound_external-dns_webhook

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix  renovate.json  result
.github/workflows/: check.yaml  release-please.yaml  release.yaml
src/: config.rs  external_dns.rs  lib.rs  main.rs  opnsense.rs  state.rs
src/opnsense/: client.rs  mod.rs  unbound.rs
