[package]
name = "opnsense_unbound_external-dns_webhook"
version = "0.3.0"
edition = "2021"
description = "opnsense unbound external-dns webhook"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = "0.7.4"
figment = { version = "0.10", features = ["yaml", "env"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
